--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "homepage": "https://github.com/vladesco/neflix#readme",
   "dependencies": {
     "@types/react-dom": "^17.0.1",
+    "jss-plugin-extend": "^10.5.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-jss": "^10.5.1",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "redux": "^4.0.5"
@@ -35,9 +38,14 @@
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^7.0.0",
+    "css-loader": "^5.1.0",
     "html-webpack-plugin": "^5.2.0",
     "jest": "^26.6.3",
     "prettier": "2.2.1",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "ts-jest": "^26.5.1",
     "ts-loader": "^8.0.17",
     "typescript": "^4.1.5",
