--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
       "jsx": "react",
       "allowJs": true,
       "sourceMap": true,
-      "moduleResolution": "classic",
+      "moduleResolution": "node",
       "allowSyntheticDefaultImports": true
     },
   }
