--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/vladesco/neflix#readme",
   "dependencies": {
     "@types/react-dom": "^17.0.1",
+    "classnames": "^2.2.6",
     "jss-plugin-extend": "^10.5.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.12.17",
     "@babel/preset-react": "^7.12.13",
+    "@types/classnames": "^2.2.11",
     "@types/html-webpack-plugin": "^3.2.4",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
