--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/react-dom": "^17.0.1",
     "classnames": "^2.2.6",
+    "formik": "^2.2.6",
     "jss-plugin-extend": "^10.5.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -31,7 +32,8 @@
     "react-router": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.17",
