[task9]: make task9

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
         "allowJs": true,
         "sourceMap": true,
         "moduleResolution": "node",
-        "allowSyntheticDefaultImports": true
+        "esModuleInterop": true
     }
 }
