--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.12.17",
     "@babel/preset-react": "^7.12.13",
+    "@testing-library/react": "^11.2.6",
     "@types/classnames": "^2.2.11",
     "@types/html-webpack-plugin": "^3.2.4",
     "@types/jest": "^26.0.20",
