--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,13 +1,6 @@
 {
+    "extends": "../tsconfig.base.json",
     "compilerOptions": {
-        "outDir": "./dist/",
-        "noImplicitAny": false,
-        "module": "es6",
-        "target": "es5",
-        "jsx": "react",
-        "allowJs": true,
-        "sourceMap": true,
-        "moduleResolution": "node",
-        "esModuleInterop": true
+        "target": "ES5"
     }
 }
